# wanmei

./: .gitignore  Archive.7z  Main.cpp  README  cpptest.7z  fc41d80e-820f-35d1-9f51-4a2e8bb7219e.rar  mpq.rar  wanmei.zargo
cmake/: CMakeLists.txt
cmake/libbzlib/: CMakeLists.txt
cmake/libcore/: CMakeLists.txt
cmake/liblogic/: CMakeLists.txt
cmake/liblua/: CMakeLists.txt
cmake/libsqlite/: CMakeLists.txt
common.core/CrcService/test/: CMakeLists.txt  cmake.sublime-workspace
source/: CMakeLists.txt  CPPLISTS  Include.h  Logic.h  Main.cpp  XMLLISTS  clientConfigure.xml  serverConfigure.xml
source/account/: Account.cpp  Account.h  AccountAll.cpp  AccountAll.h  AccountService.cpp  AccountService.h  AccountTB.cpp  AccountTB.h  C2SLogin.h
source/archive/: Archive.cpp  Archive.h  ArchiveHash.cpp  ArchiveHash.h  ArchiveHead.cpp  ArchiveHead.h  ArchiveReader.cpp  ArchiveReader.h  ArchiveService.cpp  ArchiveService.h  ArchiveWriter.cpp  ArchiveWriter.h  BinReader.cpp  BinReader.h  BinWriter.cpp  BinWriter.h  JourneyDescripter.cpp  JourneyDescripter.h  JourneyKey.cpp  JourneyKey.h  LogWriter.cpp  LogWriter.h  XmlReader.cpp  XmlReader.h  rapidxml_utils.hpp
source/closed/: ClosedMgr.cpp  ClosedService.cpp
source/com.block/: IBlock.h  ReadBlock.cpp  ReadBlock.h  WriteBlock.cpp  WriteBlock.h
source/com.client/: Client.cpp  Client.h
source/com.common/: Convert.h  DefInc.h  Default.h  Singleton.h
source/com.common/test/: Main.cpp
source/com.crc/: CrcService.cpp  CrcService.h
source/com.crc/test/: Main.cpp
source/com.handle/: Context.cpp  Context.h  Handle.cpp  Handle.h  HandleService.cpp  HandleService.h
source/com.handle/config/: handle.xml
source/com.init/: InitService.cpp  InitService.h
source/com.ioservice/: IoService.cpp  IoService.h
source/com.log/: LogService.cpp  LogService.h
source/com.log/test/: Main.cpp  (+1 more)
source/com.lua/: LuaInc.h  LuaScript.cpp  lua_tinker.cpp
source/com.packet/: IPacket.cpp  IPacket.h  IPlayer.cpp  IPlayer.h  IProtocol.cpp  IProtocol.h  ProtocolService.cpp  ProtocolService.h  Session.cpp  Session.h
source/com.random/: RandomService.cpp
source/com.server/: Server.cpp  Server.h
source/com.setting/: SettingService.cpp  SettingService.h  XmlReader.cpp
source/com.shiny/: ShinyManager.cpp
source/com.startup/: CMakeLists.txt  Main.cpp  Main.h
source/com.time/: Ping.cpp  Ping.h  PingService.cpp  PingService.h  TimeService.cpp  TimeService.h
source/common/: Common.h  Convert.h  DefInc.h  ERRORINT.h  IncInc.h  Include.h  Preinit.h  ProjInc.h  StdInc.h  TypeInc.h  UtilInc.h  classid.cpp  classid.h  convert.h  default.h  errorint.h  libinc.h  singleton.h  versionid.cpp  versionid.h
source/core/: CommandArgs.cpp  CommandArgs.h  CommandBat.cpp  CommandBat.h  CompressService.cpp  CompressService.h  Console.cpp  Console.h  ConsoleContext.cpp  ConsoleContext.h  ConsoleService.cpp  ConsoleService.h  Context.h  CoreInc.h  CrcService.cpp  CrcService.h  DebugService.cpp  DebugService.h  Handle.cpp  Handle.h  HandleService.cpp  HandleService.h  IConsole.h  IPropertyId.h  IService.cpp  IService.h  InitService.cpp  InitService.h  IoService.cpp  IoService.h  LogService.cpp  LogService.h  LuaEngine.cpp  LuaEngine.h  LuaService.cpp  Preinit.cpp  Preinit.h  Property.cpp  Property.h  PropertyId.h  (+16 more)
source/cpu/: CpuService.cpp
source/crc/: CrcService.cpp
source/db/: DbCreate.cpp  DbDrop.cpp  DbInc.h  DbService.cpp  DbService.h  DbSet.cpp  IDataBase.cpp  IDataBase.h  IDbQuery.cpp  IDbQuery.h  ISqlHeadstream.h  ISqlStream.h  MySqlConnection.cpp  MySqlConnection.h  MySqlDataBase.cpp  MySqlDataBase.h  MySqlDbQuery.cpp  MySqlQuery.cpp  MySqlQuery.h  SqlCommand.cpp  SqlCommand.h  SqlDeal_.h  SqlFieldId_.h  SqlType_.h  SqliteDataBase.cpp  SqliteDataBase.h  SqliteQuery.cpp  SqliteQuery.h  centerDb.xml  gameDb.xml  logDb.xml
source/handle/: Handle.cpp  HandleService.cpp
source/include/: Preinit.cpp
source/init/: InitService.cpp
source/log/: LogService.cpp
source/logic/: LogicInc.h
source/lua/: LuaScript.cpp  LuaScript.h  LuaService.cpp  LuaWriter.cpp
source/net/: IPacket.cpp  Session.cpp  SingleWire.cpp  WriteBlock.cpp
source/ping/: C2SPing.cpp  C2SPing.h  PingProtocol.cpp  PingProtocol.h  PingTick.cpp  PingTick.h  S2CPing.cpp  S2CPing.h
source/player/: Player.cpp  Player.h  Robot.cpp  Robot.h  Tourist.cpp  Tourist.h
source/projInc/: AgentServer.h  CocoClient.h  DbServer.h  GameClient.h  GameServer.h  LoginServer.h
source/property/: PropertyMgr.cpp  PropertySink.cpp
source/server/: C2SServer.cpp  C2SServer.h  S2CServer.h  Server.cpp  Server.h  ServerMgr.cpp  ServerMgr.h  ServerService.cpp  ServerService.h
source/service/: CommandArgs.cpp  CommandArgs.h  CompressService.cpp  CompressService.h  Console.cpp  Console.h  Context.cpp  Context.h  CrcService.cpp  CrcService.h  DebugService.cpp  DebugService.h  Handle.cpp  Handle.h  HandleService.cpp  HandleService.h  IService.cpp  IService.h  IServiceId.h  InitService.cpp  InitService.h  LogService.cpp  LogService.h  LuaEngine.cpp  LuaEngine.h  LuaService.cpp  LuaService.h  RandomService.cpp  RandomService.h  ServiceId.h  ServiceInc.h  ServiceMgr.cpp  ServiceMgr.h  StringWriter.cpp  StringWriter.h  TimeService.cpp  TimeService.h  handleServer.xml
source/session/: IBlock.h  IPacket.cpp  IPacket.h  IProtocol.cpp  IProtocol.h  IoService.cpp  IoService.h  ProtocolService.cpp  ProtocolService.h  ReadBlock.cpp  ReadBlock.h  Session.cpp  Session.h  SessionService.cpp  SessionService.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  WriteBlock.cpp  WriteBlock.h
source/setting/: SettingService.cpp
source/shiny/: ShinyManager.cpp  ShinyNode.cpp  ShinyNodePool.cpp  ShinyOutput.cpp  ShinyTools.cpp
source/startup/: CMakeLists.txt  Main.cpp  Startup.cpp  Startup.h
source/tcpClient/: TcpClient.cpp  TcpClient.h
source/tcpServer/: TcpServer.cpp  TcpServer.h
source/time/: TimeService.cpp
source/utility/: Convert.h
source/world/: Player.cpp  Player.h  Robot.h  Tourist.cpp  Tourist.h  World.cpp  World.h  WorldService.cpp  WorldService.h  worldClient.xml  worldServer.xml
(+601 files in other folders)
