cmake_minimum_required(VERSION 3.0)
if (__CLIENT__)
	project(client.startup)
	add_definitions("-D__CLIENT__")
elseif(__SERVER__)
	project(server.startup)
	add_definitions("-D__SERVER__")
endif()
add_definitions("-D__STARTUP__")
set(CMAKE_CXX_FLAGS "-std=c++0x -static-libgcc -static-libstdc++ -U__STRICT_ANSI__")
include_directories($ENV{BOOST_ROOT})
link_directories($ENV{BOOST_ROOT}/stage/lib)
set(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.55.0 COMPONENTS log log_setup system thread filesystem date_time REQUIRED)
include_directories(${__INCLUDE__})
add_subdirectory(com.startup)
