AUX_SOURCE_DIRECTORY(. STARTUP_LIST)
AUX_SOURCE_DIRECTORY(../com.lua LUA_LIST0)
AUX_SOURCE_DIRECTORY(../com.lua/lua LUA_LIST1)
AUX_SOURCE_DIRECTORY(../com.log LOG_LIST)
AUX_SOURCE_DIRECTORY(../com.crc CRC_LIST)
add_executable(${PROJECT_NAME} ${STARTUP_LIST}
	${LUA_LIST0} ${LUA_LIST1}
	${LOG_LIST}
	${CRC_LIST})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
