AUX_SOURCE_DIRECTORY(. STARTUP_LIST)
AUX_SOURCE_DIRECTORY(../com.lua LUA_LIST0)
AUX_SOURCE_DIRECTORY(../com.lua/lua LUA_LIST1)
AUX_SOURCE_DIRECTORY(../com.log LOG_LIST)
AUX_SOURCE_DIRECTORY(../com.crc CRC_LIST)
AUX_SOURCE_DIRECTORY(../com.setting SETTING_LIST)
AUX_SOURCE_DIRECTORY(../com.shiny SHINY_LIST)
AUX_SOURCE_DIRECTORY(../com.handle HANDLE_LIST)
add_executable(${PROJECT_NAME} ${STARTUP_LIST}
	${LUA_LIST0} ${LUA_LIST1}
	${LOG_LIST}
	${CRC_LIST}
	${SETTING_LIST}
	${SHINY_LIST}
	${HANDLE_LIST})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
