project(testMain)
cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_FLAGS "-std=c++0x -static-libgcc -static-libstdc++ -U__STRICT_ANSI__")
include_directories($ENV{BOOST_ROOT})
link_directories($ENV{BOOST_ROOT}/stage/lib)
set(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.55.0 COMPONENTS log log_setup system thread filesystem REQUIRED)
aux_source_directory(. SRC_LIST)
aux_source_directory(.. SRC_LIST0)
add_executable(testMain ${SRC_LIST} ${SRC_LIST0})
target_link_libraries(testMain ${Boost_LIBRARIES})
